--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <style type="text/css">
-*{ margin:0px; padding:0px;}
+*{ margin:0; padding:0;}
 body{ font-family:Verdana, Geneva, sans-serif; font-size:14px;}
 ul{ list-style: none;}
 .top-nav{
@@ -39,7 +39,7 @@ ul{ list-style: none;}
     color:#999;
     text-decoration: none;
     text-align: center;
-    font:bold 12px ;
+    font:12px bold;
     text-shadow:0 1px 0 #000;
 
 }
@@ -54,7 +54,7 @@ ul{ list-style: none;}
     background-color: #444;
     background-image: linear-gradient(#444,#111);
     border-bottom:1px solid #222;
-    box-shadow: 0 -1px 0 rgb(255,255,255,.3);
+    box-shadow: 0 -1px 0 rgba(255,255,255,.3);
     border-radius: 6px;
     opacity: 0;
     margin:20px 0 0 0;
@@ -82,7 +82,7 @@ ul{ list-style: none;}
 .top-nav2 li:last-child,.top-nav2 li:last-child>a{border-radius:  0 0 6px 6px;}
 .top-nav2 li a:hover{
     background-color:#0186ba;
-    background-image: linear-geadient(#04acec,#0186ba)
+    background-image:linear-gradient(#04acec,#0186ba);
 }
 
 
@@ -130,7 +130,7 @@ ul{ list-style: none;}
 /*text*/
 
  </style>
-
+</head>
 
 <body>
 <div id="nav">
